--- a/Imagens/ex3b.html
+++ b/Imagens/ex3b.html
@@ -24,12 +24,21 @@
     <script src ="src/img.processing.js"> </script>
     
     <script>
-      function processImage() {
-        var kernel = "sobel"; 
-        var imgprocesser = new ImageProcessing.ImageProcesser(gray_img, kernel, null, 'extend');
 
-        return imgprocesser.update();
-      }
+        var kernel = "sobel"; 
+        var imgprocesser;
+        
+        function wait() {
+          if(img_load_flag == false) {
+            window.setTimeout(wait, 100); /* this checks the flag every 100 milliseconds*/
+          } 
+          else {
+            imgprocesser = new ImageProcessing.ImageProcesser(gray_img, kernel, null, 'extend');
+            imgprocesser.update();
+          }
+        }
+        wait();
+
 
     </script>
 
