--- a/Imagens/ex2.html
+++ b/Imagens/ex2.html
@@ -25,12 +25,20 @@
     
     <script>
 
-      function processImage() {
-        var xform = nj.array([[1, 0.5, 0], [0, 0.87, 0], [0, 0, 1]]);
-        var imgprocesser = new ImageProcessing.ImageProcesser(gray_img, null, xform);
 
-        return imgprocesser.update();
-      }
+        var xform = nj.array([[1, 0.5, 0], [0, 0.87, 0], [0, 0, 1]]);
+        var imgprocesser;
+        
+        function wait() {
+          if(img_load_flag == false) {
+            window.setTimeout(wait, 100); /* this checks the flag every 100 milliseconds*/
+          } 
+          else {
+            imgprocesser = new ImageProcessing.ImageProcesser(gray_img, null, xform);
+            imgprocesser.update();
+          }
+        }
+        wait();
 
     </script>
 
