--- a/Imagens/ex3.html
+++ b/Imagens/ex3.html
@@ -24,13 +24,21 @@
     <script src ="src/img.processing.js"> </script>
     
     <script>
-      function processImage() {
-        var kernel = "sobel"; 
-        var imgprocesser = new ImageProcessing.ImageProcesser(gray_img, kernel);
 
-        return imgprocesser.update();
-      
-      }
+        var kernel = "sobel";
+        var imgprocesser;
+
+        function wait() {
+          if(img_load_flag == false) {
+            window.setTimeout(wait, 100); /* this checks the flag every 100 milliseconds*/
+          } 
+          else {
+            imgprocesser = new ImageProcessing.ImageProcesser(gray_img, kernel);
+            imgprocesser.update();
+          }
+        }
+        wait();
+
 
     </script>
 
