--- a/Imagens/ex1.html
+++ b/Imagens/ex1.html
@@ -26,21 +26,19 @@
     
     <script>
 
-      var kernel = "box"; 
-      var imgprocesses;
+        var kernel = "box"; 
+        var imgprocesses;
 
-      function wait() {
-        if(img_load_flag == false) {
+        function wait() {
+          if(img_load_flag == false) {
             window.setTimeout(wait, 100); /* this checks the flag every 100 milliseconds*/
-        } 
-        else {
-          imgprocesser = new ImageProcessing.ImageProcesser(gray_img, kernel, null, 'extend');
-          imgprocesser.update();
-        } 
-      }
-
-      wait();
-
+          } 
+          else {
+            imgprocesser = new ImageProcessing.ImageProcesser(gray_img, kernel);
+            imgprocesser.update();
+          }
+        }
+        wait();
         
 
     </script>
